Add bindings for Core::File

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,11 @@ project(libjs-bindings)
 set(SOURCES
     src/jsb.cpp
     src/Bindings/GlobalObject.cpp
+    src/Bindings/LibCore/File.cpp
 )
 
 add_executable(jsb ${SOURCES})
 target_link_libraries(jsb gui gfx ipc core js line)
 
 install(TARGETS jsb RUNTIME DESTINATION local/bin)
+install(DIRECTORY examples DESTINATION local/share/jsb)
